src/test/deca/context/invalid/resultats/test_ident_attribute-cont.res
./src/test/deca/context/invalid/test_ident_attribute.deca:16:5: The identifier x already exists and it is not an attribute
